<resources>
    <string name="app_name">Flash Card</string>
    <string name="menu_all_cards">All Cards</string>
    <string name="menu_trash">Trash</string>
    <string name="menu_sections">Sections</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="card_title">Title</string>
    <string name="card_section">Select Section</string>
    <string name="card_front">Front View</string>
    <string name="card_back">Back View</string>
    <string name="card_save">Save</string>
    <string name="card_new">Add New Card</string>
    <string name="add">Create</string>
    <string name="sectionName">Name</string>
    <string name="sectionColor">Color</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="card_checked">Card Checked</string>
    <string name="summary">Summary</string>
</resources>